Commit for Week_1 (notes complete)

--- a/Week_1/Week_1.html
+++ b/Week_1/Week_1.html
@@ -395,9 +395,9 @@ summary {
 <ul>
 <li>CSHub research: <a href="https://www.youtube.com/watch?v=wD9dcRm7fgw">video</a><br />
 </li>
-<li>NIBS’ Mitigation Saves: <a href="https://www.nibs.org/page/mitigationsaves">report</a><br />
+<li>NIBS’ Mitigation Saves: <a href="https://www.nibs.org/page/mitigationsaves">report</a> (only intro)<br />
 </li>
-<li>IBHS’ Rating the States: <a href="https://ibhs.org/public-policy/rating-the-states/">report</a></li>
+<li>IBHS’ Rating the States: <a href="https://ibhs.org/public-policy/rating-the-states/">report</a> (only intro)</li>
 </ul>
 </div>
 <div id="prepare-for-the-upcoming-weeks" class="section level3">
