Commit for Week_2 (corrected notes)

--- a/Week_2/Week_2.html
+++ b/Week_2/Week_2.html
@@ -437,7 +437,7 @@ summary {
 </li>
 <li>Fill in “Precision”: 8 (important later on)<br />
 </li>
-<li>Fill in “Expression”: $x<br />
+<li>Fill in “Expression”: x($geometry)<br />
 </li>
 <li>“Okay” (might take a moment)</li>
 </ul>
@@ -455,7 +455,7 @@ summary {
 </li>
 <li>Fill in “Precision”: 8 (important later on)<br />
 </li>
-<li>Fill in “Expression”: $y<br />
+<li>Fill in “Expression”: y($geometry)<br />
 </li>
 <li>“Okay” (might take a moment)</li>
 </ul>
