Commit for Week_3 (notes updated)

--- a/Week_3/Week_3.html
+++ b/Week_3/Week_3.html
@@ -395,13 +395,15 @@ summary {
 </li>
 <li>Files in Hazus/Hazus_mat<br />
 </li>
+<li><strong>Hazus data currently missing for PA, VT and WV.</strong><br />
+</li>
 <li>Files in ACS_DP03/ACS_DP03_mat<br />
 </li>
 <li>Files in ACS_DP04/ACS_DP04_mat<br />
 </li>
 <li>Files in PUMS/PUMS_mat<br />
 </li>
-<li>Files in Census_tracts_neighbors<br />
+<li>Files in Census_tracts_neighbors/mat<br />
 </li>
 <li>Entire code under Week_3</li>
 </ul>
