--- a/Week_3/Week_3.html
+++ b/Week_3/Week_3.html
@@ -380,6 +380,23 @@ summary {
 </div>
 
 
+<div id="interpretting-results-from-last-week" class="section level1">
+<h1>Interpretting results from last week:</h1>
+<pre class="r"><code>shiny::includeHTML(&quot;./Tableau_ex.html&quot;)</code></pre>
+<div class='tableauPlaceholder' id='viz1611102407309' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ex&#47;ex_3_16110820952000&#47;ModelWindSpeedRatios&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ex_3_16110820952000&#47;ModelWindSpeedRatios' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ex&#47;ex_3_16110820952000&#47;ModelWindSpeedRatios&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1611102407309');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<ul>
+<li>You can check out the example figures: <a href="https://public.tableau.com/profile/bensu8294#!/vizhome/ex_3_16110820952000/ModelWindSpeedRatios">here</a><br />
+</li>
+<li>Referring to the model WSRs, we expect metro areas to be “orange”, and less dense areas to be “blue”.</li>
+<li>Miami, Orlando and Jacksonville in FL follow this trend.<br />
+</li>
+<li>However, metro areas such as Atlanta in GA are not discernable. Why?<br />
+</li>
+<li>Several inland areas in TX and NY that don’t seem to be metro areas are discernable. Why?<br />
+</li>
+<li>Perhaps compare screenshots from .geojson files or Google maps.</li>
+</ul>
+</div>
 <div id="to-discuss-the-economic-implications-of-texture-we-need-to" class="section level1">
 <h1>To discuss the economic implications of texture, we need to:</h1>
 <ul>
