Commit for Week_3 (notes updated)

--- a/Week_3/Week_3.html
+++ b/Week_3/Week_3.html
@@ -435,17 +435,17 @@ summary {
 </ul>
 <p>Step 2: Sharing the results</p>
 <ul>
-<li><strong>You’ll have 12 .mat and 12 .csv files for EALs in each state.</strong><br />
+<li><strong>You’ll have 6 .mat and 6 .csv files for EALs in each state.</strong><br />
 </li>
-<li><strong>4 of each are ‘EAL’ (in $1000 per household).</strong><br />
+<li><strong>2 of each are ‘EAL’ (in $1000 per household).</strong><br />
 </li>
-<li><strong>4 are ‘EAL_PerValue’ (normalized by home value).</strong><br />
+<li><strong>2 are ‘EAL_PerValue’ (normalized by home value).</strong><br />
 </li>
-<li><strong>4 are ‘EAL_PerInc’ (normalized by household income).</strong><br />
+<li><strong>2 are ‘EAL_PerInc’ (normalized by household income).</strong><br />
 </li>
-<li><strong>6 are ‘Case0’ (for an unmitigated building stock) and 6 are ‘Case1’ (for a mitigated building stock).</strong><br />
+<li><strong>Each includes ‘Case0’ (for an unmitigated building stock) and ‘Case1’ (for a mitigated building stock).</strong><br />
 </li>
-<li><strong>Also, 6 are ‘Hazus’ (based on a framework developed by FEMA) and 6 are ‘New’ (based on an updated framework).</strong><br />
+<li><strong>Also, each includes ‘Hazus’ (based on a framework developed by FEMA) and ‘New’ (based on an updated framework).</strong><br />
 </li>
 <li>Upload to Dropbox :)</li>
 </ul>
