Commit for Week_3 (notes updated)

--- a/Week_3/Week_3.html
+++ b/Week_3/Week_3.html
@@ -410,9 +410,7 @@ summary {
 <h2>Computing building-specific expected annual losses (EAL)</h2>
 <p>Step 1: Running the code</p>
 <ul>
-<li>In “Command window” (bottom of page), run “index.m”<br />
-</li>
-<li><strong>Similar to last week, you’ll need to adjust the “for” loop for your study area.</strong></li>
+<li>In “Command window” (bottom of page), run “index.m”</li>
 </ul>
 <p>Step 2: Sharing the results</p>
 <ul>
